Update image.js and carousel

--- a/.design/package.json
+++ b/.design/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js --mode production",
-    "dev": "webpack --config webpack.config.js --mode development --watch"
+    "dev": "webpack --config webpack.config.js --mode development --watch",
+    "images": "node ./bin/images.js"
   },
   "author": "Yuta Konishi",
   "license": "MIT",
